--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,113 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.markdown {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+  }
+
+  h4 {
+    font-size: 1rem;
+  }
+
+  h5 {
+    font-size: 0.875rem;
+  }
+
+  h6 {
+    font-size: 0.75rem;
+  }
+
+  p {
+    margin: 1rem 0;
+  }
+
+  a {
+    color: var(--foreground);
+    text-decoration: underline;
+  }
+
+  blockquote {
+    margin: 1rem 0;
+    padding: 0.5rem;
+    background: #f9f9f9;
+    border-left: 0.25rem solid #ccc;
+  }
+
+  pre {
+    margin: 1rem 0;
+    padding: 1rem;
+    background: #f9f9f9;
+    border-radius: 0.5rem;
+  }
+
+  code {
+    font-family: monospace;
+    background: #f9f9f9;
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  ul {
+    margin: 1rem 0;
+    padding: 0 1rem;
+  }
+
+  ol {
+    margin: 1rem 0;
+    padding: 0 1rem;
+  }
+
+  li {
+    margin: 0.5rem 0;
+  }
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    padding: 0.5rem;
+    border-bottom: 1px solid #ccc;
+  }
+
+  th {
+    text-align: left;
+  }
+
+  tr:nth-child(even) {
+    background: #f9f9f9;
+  }
+}
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  .markdown,
+  .markdown * {
+    visibility: visible;
+  }
+  .markdown {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+}
